--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "kaibanjs-news-blogger",
-  "private": true,
-  "version": "0.0.0",
+  "name": "kaibanjs-devtools",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,11 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@langchain/community": "^0.2.32",
-    "kaibanjs": "^0.4.0",
+    "kaiban-board": "^0.1.3",
+    "kaibanjs": "^0.7.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -27,5 +25,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "vite": "^5.4.1"
-  }
+  },
+  "author": "AI Champions",
+  "license": "Apache-2.0"
 }
