--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "vercel --prod --yes",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "kaiban-board": "^0.1.3",
+    "kaiban-board": "^0.1.4",
     "kaibanjs": "^0.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
