--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "kaiban-board": "^0.1.5",
-    "kaibanjs": "^0.7.0",
+    "kaibanjs": "^0.8.0-rc2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
