--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "kaiban-board": "^0.1.18",
-    "kaibanjs": "^0.8.0-rc6",
+    "kaiban-board": "0.1.21",
+    "kaibanjs": "0.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
