--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "kaiban-board": "0.2.3",
-    "kaibanjs": "0.10.0",
+    "kaiban-board": "^0.2.3",
+    "kaibanjs": "^0.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
